Use blur instead of spread to avoid visible edges

--- a/resources/sass/views/index.scss
+++ b/resources/sass/views/index.scss
@@ -158,8 +158,8 @@ html {
         padding: 0 .25rem;
         text-decoration: none;
         font: 500 4vmin "JetBrains Mono", monospace;
-        // Do not change 0.09 of spread - this fixes the flickering issue on hover
-        box-shadow: inset 0 0 0 0.09px colors.$cl_main_bright;
+        // Do not change 0.09 of blur - this fixes the flickering issue on hover
+        box-shadow: inset 0 0 0.01px 0 colors.$cl_main_bright;
         color: white;
         transition: color 300ms ease-in-out, box-shadow 300ms ease-in-out;
 
